Corrigindo a DIV e centralizando

--- a/css/style.css
+++ b/css/style.css
@@ -2,15 +2,16 @@ body {
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     background-image: linear-gradient(to right, rgb(16, 18, 19), rgb(25, 65, 83));
     color: #FFF;
-   
-    
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 50px;
+    margin-bottom: 50px;
+      
 }
 
 .container {
-    position: absolute;
     width: 50%;
-    left: 25%;
-    top: 10%;
     background-color:#FFF;
     padding: 50px;
     border-radius: 8px;
